--- a/templates/listings-half-screen-map-grid-1.html
+++ b/templates/listings-half-screen-map-grid-1.html
@@ -36,7 +36,7 @@
 
                         <!-- Logo -->
                         <div id="logo">
-                            <a href="index-2.html"><img src="images/logo.png" alt=""></a>
+                            <a href="index.html"><img src="images/logo.png" alt=""></a>
                         </div>
 
                         <!-- Mobile Navigation -->
@@ -68,7 +68,7 @@
                                         <ul>
                                             <li><a href="dashboard-bookings.html"><i class="fa fa-calendar-check-o"></i> Orders</a></li>
                                             <li><a href="dashboard-my-profile.html"><i class="sl sl-icon-settings"></i> Account</a></li>
-                                            <li><a href="index-2.html"><i class="sl sl-icon-power"></i> Logout</a></li>
+                                            <li><a href="index.html"><i class="sl sl-icon-power"></i> Logout</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -347,7 +347,7 @@
 
                             <!-- Listing Item -->
                             <div class="col-lg-6 col-md-12">
-                                <a href="listings-single-page-2.html" class="listing-item-container" data-marker-id="1">
+                                <a href="item.html" class="listing-item-container" data-marker-id="1">
                                     <div class="listing-item">
                                         <img src="images/listing-item-01.jpg" alt="">
 
@@ -369,7 +369,7 @@
 
                             <!-- Listing Item -->
                             <div class="col-lg-6 col-md-12">
-                                <a href="listings-single-page-2.html" class="listing-item-container" data-marker-id="2">
+                                <a href="item.html" class="listing-item-container" data-marker-id="2">
                                     <div class="listing-item">
                                         <img src="images/listing-item-02.jpg" alt="">
                                         <div class="listing-item-content">
@@ -388,7 +388,7 @@
 
                             <!-- Listing Item -->
                             <div class="col-lg-6 col-md-12">
-                                <a href="listings-single-page-2.html" class="listing-item-container" data-marker-id="3">
+                                <a href="item.html" class="listing-item-container" data-marker-id="3">
                                     <div class="listing-item">
                                         <img src="images/listing-item-03.jpg" alt="">
 
@@ -408,7 +408,7 @@
 
                             <!-- Listing Item -->
                             <div class="col-lg-6 col-md-12">
-                                <a href="listings-single-page-2.html" class="listing-item-container" data-marker-id="4">
+                                <a href="item.html" class="listing-item-container" data-marker-id="4">
                                     <div class="listing-item">
                                         <img src="images/listing-item-04.jpg" alt="">
 
@@ -430,7 +430,7 @@
 
                             <!-- Listing Item -->
                             <div class="col-lg-6 col-md-12">
-                                <a href="listings-single-page-2.html" class="listing-item-container" data-marker-id="5">
+                                <a href="item.html" class="listing-item-container" data-marker-id="5">
                                     <div class="listing-item">
                                         <img src="images/listing-item-05.jpg" alt="">
                                         <div class="listing-item-content">
@@ -449,7 +449,7 @@
 
                             <!-- Listing Item -->
                             <div class="col-lg-6 col-md-12">
-                                <a href="listings-single-page-2.html" class="listing-item-container" data-marker-id="6">
+                                <a href="item.html" class="listing-item-container" data-marker-id="6">
                                     <div class="listing-item">
                                         <img src="images/listing-item-06.jpg" alt="">
 
