--- a/templates/dashboard-bookings.html
+++ b/templates/dashboard-bookings.html
@@ -36,8 +36,8 @@
 
                         <!-- Logo -->
                         <div id="logo">
-                            <a href="index-2.html"><img src="images/logo.png" alt=""></a>
-                            <a href="index-2.html" class="dashboard-logo"><img src="images/logo2.png" alt=""></a>
+                            <a href="index.html"><img src="images/logo.png" alt=""></a>
+                            <a href="index.html" class="dashboard-logo"><img src="images/logo2.png" alt=""></a>
                         </div>
 
                         <!-- Mobile Navigation -->
@@ -68,7 +68,7 @@
                                         <ul>
                                             <li><a href="dashboard-bookings.html"><i class="fa fa-calendar-check-o"></i> Orders</a></li>
                                             <li><a href="dashboard-my-profile.html"><i class="sl sl-icon-settings"></i> Account</a></li>
-                                            <li><a href="index-2.html"><i class="sl sl-icon-power"></i> Logout</a></li>
+                                            <li><a href="index.html"><i class="sl sl-icon-power"></i> Logout</a></li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -110,7 +110,7 @@
 
                     <ul data-submenu-title="Account">
                         <li><a href="dashboard-my-profile.html"><i class="sl sl-icon-user"></i> My Profile</a></li>
-                        <li><a href="index-2.html"><i class="sl sl-icon-power"></i> Logout</a></li>
+                        <li><a href="index.html"><i class="sl sl-icon-power"></i> Logout</a></li>
                     </ul>
 
                 </div>
