--- a/templates/pages-booking-confirmation.html
+++ b/templates/pages-booking-confirmation.html
@@ -35,7 +35,7 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<a href="index-2.html"><img src="images/logo.png" alt=""></a>
+					<a href="index.html"><img src="images/logo.png" alt=""></a>
 				</div>
 
 				<!-- Mobile Navigation -->
@@ -67,7 +67,7 @@
 										<ul>
 											<li><a href="dashboard-bookings.html"><i class="fa fa-calendar-check-o"></i> Orders</a></li>
 											<li><a href="dashboard-my-profile.html"><i class="sl sl-icon-settings"></i> Account</a></li>
-											<li><a href="index-2.html"><i class="sl sl-icon-power"></i> Logout</a></li>
+											<li><a href="index.html"><i class="sl sl-icon-power"></i> Logout</a></li>
 										</ul>
 									</li>
 							</ul>
