--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <link rel="manifest" href="{{ url_for('static', filename='images/site.webmanifest') }}">
 </head>
 
-<body class="transparent-header">
+<body {% if transparent %}class="transparent-header"{% endif %}>
 
     <!-- Wrapper -->
     <div id="wrapper">
@@ -36,7 +36,12 @@
 
                         <!-- Logo -->
                         <div id="logo">
+                            {% if transparent %}
                             <a href="{{ url_for('home') }}"><img src="{{ url_for('static', filename='images/logo2.png') }}" data-sticky-logo="{{ url_for('static', filename='images/logo.png') }}" alt=""></a>
+                            {% endif %}
+                            {% if not transparent %}
+                            <a href="{{ url_for('home') }}"><img src="{{ url_for('static', filename='images/logo.png') }}"  alt=""></a>
+                            {% endif %}
                         </div>
 
                         <!-- Mobile Navigation -->
