--- a/templates/item.html
+++ b/templates/item.html
@@ -266,7 +266,7 @@
                         <!-- Book Now -->
 
 
-                        <a href="pages-booking.html" class="button book-now fullwidth margin-top-5">Checkout</a>
+                        <a href="checkout.html" class="button book-now fullwidth margin-top-5">Checkout</a>
 
                         <!-- Estimated Cost -->
                         <!-- 				<div class="booking-estimated-cost">
