--- a/templates/listings-half-screen-map-grid-1.html
+++ b/templates/listings-half-screen-map-grid-1.html
@@ -73,7 +73,7 @@
                                     </li>
                                 </ul>
                             </nav>
-                            <a href="pages-booking.html" class="button border with-icon">Cart <i class="sl sl-icon-basket"></i></a>
+                            <a href="checkout.html" class="button border with-icon">Cart <i class="sl sl-icon-basket"></i></a>
                         </div>
                     </div>
                     <!-- Right Side Content / End -->
