checkout confirm works

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -87,7 +87,7 @@
 			</div>
 			<!-- Payment Methods Accordion / End -->
 		
-			<a href="pages-booking-confirmation.html" class="button booking-confirmation-btn margin-top-40 margin-bottom-65">Confirm Order</a>
+			<a href="{{ url_for('checkout_confirm') }}" class="button booking-confirmation-btn margin-top-40 margin-bottom-65">Confirm Order</a>
 		</div>
 
 
