--- a/templates/listing.html
+++ b/templates/listing.html
@@ -1,183 +1,6 @@
-<!DOCTYPE html>
+{% extends "index.html" %}
 
-<head>
-
-    <!-- Basic Page Needs
-================================================== -->
-    <title>FarmNet</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-    <!-- CSS
-================================================== -->
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/main-color.css" id="colors">
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
-    <link rel="manifest" href="images/site.webmanifest">
-</head>
-
-<body>
-
-    <!-- Wrapper -->
-    <div id="wrapper">
-
-        <!-- Header Container
-================================================== -->
-        <header id="header-container" class="fixed fullwidth">
-
-            <!-- Header -->
-            <div id="header" class="not-sticky">
-                <div class="container">
-
-                    <!-- Left Side Content -->
-                    <div class="left-side">
-
-                        <!-- Logo -->
-                        <div id="logo">
-                            <a href="index.html"><img src="images/logo.png" alt=""></a>
-                        </div>
-
-                        <!-- Mobile Navigation -->
-                        <div class="mmenu-trigger">
-                            <button class="hamburger hamburger--collapse" type="button">
-						<span class="hamburger-box">
-							<span class="hamburger-inner"></span>
-						</span>
-					</button>
-                        </div>
-
-                        <!-- Main Navigation -->
-
-                        <div class="clearfix"></div>
-                        <!-- Main Navigation / End -->
-
-                    </div>
-                    <!-- Left Side Content / End -->
-
-                    <!-- Right Side Content / End -->
-                    <div class="right-side">
-                        <div>
-
-
-                            <a href="#sign-in-dialog" class="button border popup-with-zoom-anim"><i class="sl sl-icon-login"></i> Sign In</a>
-                            <nav id="navigation" class="style-1">
-                                <ul id="responsive">
-                                    <li><a href="#">Hi, User</a>
-                                        <ul>
-                                            <li><a href="dashboard-bookings.html"><i class="fa fa-calendar-check-o"></i> Orders</a></li>
-                                            <li><a href="dashboard-my-profile.html"><i class="sl sl-icon-settings"></i> Account</a></li>
-                                            <li><a href="index.html"><i class="sl sl-icon-power"></i> Logout</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </nav>
-                            <a href="checkout.html" class="button border with-icon">Cart <i class="sl sl-icon-basket"></i></a>
-                        </div>
-                    </div>
-                    <!-- Right Side Content / End -->
-
-                    <!-- Sign In Popup -->
-                    <div id="sign-in-dialog" class="zoom-anim-dialog mfp-hide">
-
-                        <div class="small-dialog-header">
-                            <h3>Sign In</h3>
-                        </div>
-
-                        <!--Tabs -->
-                        <div class="sign-in-form style-1">
-
-                            <ul class="tabs-nav">
-                                <li class=""><a href="#tab1">Log In</a></li>
-                                <li><a href="#tab2">Register</a></li>
-                            </ul>
-
-                            <div class="tabs-container alt">
-
-                                <!-- Login -->
-                                <div class="tab-content" id="tab1" style="display: none;">
-                                    <form method="post" class="login">
-
-                                        <p class="form-row form-row-wide">
-                                            <label for="username">Username:
-										<i class="im im-icon-Male"></i>
-										<input type="text" class="input-text" name="username" id="username" value="" />
-									</label>
-                                        </p>
-
-                                        <p class="form-row form-row-wide">
-                                            <label for="password">Password:
-										<i class="im im-icon-Lock-2"></i>
-										<input class="input-text" type="password" name="password" id="password"/>
-									</label>
-                                            <span class="lost_password">
-										<a href="#" >Lost Your Password?</a>
-									</span>
-                                        </p>
-
-                                        <div class="form-row">
-                                            <input type="submit" class="button border margin-top-5" name="login" value="Login" />
-                                            <div class="checkboxes margin-top-10">
-                                                <input id="remember-me" type="checkbox" name="check">
-                                                <label for="remember-me">Remember Me</label>
-                                            </div>
-                                        </div>
-
-                                    </form>
-                                </div>
-
-                                <!-- Register -->
-                                <div class="tab-content" id="tab2" style="display: none;">
-
-                                    <form method="post" class="register">
-
-                                        <p class="form-row form-row-wide">
-                                            <label for="username2">Username:
-									<i class="im im-icon-Male"></i>
-									<input type="text" class="input-text" name="username" id="username2" value="" />
-								</label>
-                                        </p>
-
-                                        <p class="form-row form-row-wide">
-                                            <label for="email2">Email Address:
-									<i class="im im-icon-Mail"></i>
-									<input type="text" class="input-text" name="email" id="email2" value="" />
-								</label>
-                                        </p>
-
-                                        <p class="form-row form-row-wide">
-                                            <label for="password1">Password:
-									<i class="im im-icon-Lock-2"></i>
-									<input class="input-text" type="password" name="password1" id="password1"/>
-								</label>
-                                        </p>
-
-                                        <p class="form-row form-row-wide">
-                                            <label for="password2">Repeat Password:
-									<i class="im im-icon-Lock-2"></i>
-									<input class="input-text" type="password" name="password2" id="password2"/>
-								</label>
-                                        </p>
-
-                                        <input type="submit" class="button border fw margin-top-10" name="register" value="Register" />
-
-                                    </form>
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <!-- Sign In Popup / End -->
-
-                </div>
-            </div>
-            <!-- Header / End -->
-
-        </header>
-        <div class="clearfix"></div>
-        <!-- Header Container / End -->
-
+{% block content %}
 
         <!-- Content
 ================================================== -->
@@ -524,6 +347,10 @@
     </div>
     <!-- Wrapper / End -->
 
+    {% endblock %}
+
+    {% block footer %}
+    {% endblock %}
 
     <!-- Scripts
 ================================================== -->
@@ -538,6 +365,8 @@
     <script type="text/javascript" src="scripts/jquery-ui.min.js"></script>
     <script type="text/javascript" src="scripts/tooltips.min.js"></script>
     <script type="text/javascript" src="scripts/custom.js"></script>
+
+    {% block addonScripts %}
 
     <!-- Google Autocomplete -->
     <script>
@@ -563,11 +392,8 @@
 
     <!-- Maps -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDb0gUXJo2Zqe1gVyljSG5FRmNHT1bXIa0&amp;libraries=places&amp;callback=initAutocomplete"></script>
-    <script type="text/javascript" src="scripts/infobox.min.js"></script>
-    <script type="text/javascript" src="scripts/markerclusterer.js"></script>
-    <script type="text/javascript" src="scripts/maps.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='scripts/infobox.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='scripts/markerclusterer.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='scripts/maps.js') }}"></script>
 
-
-</body>
-
-</html>
+    {% endblock %}
