--- a/templates/index.html
+++ b/templates/index.html
@@ -540,6 +540,8 @@
 
         {% endblock %}
 
+        {% block footer %}
+
         <!-- Footer
 ================================================== -->
         <div id="footer" class="dark">
@@ -613,6 +615,7 @@
     </div>
     <!-- Wrapper / End -->
 
+    {% endblock %}
 
     <!-- Scripts
 ================================================== -->
