--- a/templates/checkout_confirm.html
+++ b/templates/checkout_confirm.html
@@ -37,7 +37,7 @@
 				<i class="fa fa-check-circle"></i>
 				<h2 class="margin-top-30">Thanks for your Order!</h2>
 				<p>You'll receive a confirmation email at <a href="#" class="__cf_email__" >test@test.com</a></p>
-				<a href="dashboard-invoice.html" class="button margin-top-30">View Invoice</a>
+				<a href="{{ url_for('invoice') }}" class="button margin-top-30">View Invoice</a>
 			</div>
 
 		</div>
